-- Initialize database with tables and seed data
-- This script runs automatically on first PostgreSQL startup

-- Create courses table
CREATE TABLE IF NOT EXISTS courses (
    id INTEGER PRIMARY KEY,
    title VARCHAR(255) NOT NULL,
    domain VARCHAR(100) NOT NULL,
    level VARCHAR(50) NOT NULL,
    duration_hours INTEGER NOT NULL,
    tags TEXT[] NOT NULL,
    prereq_ids INTEGER[] NOT NULL DEFAULT '{}'
);

CREATE INDEX IF NOT EXISTS idx_courses_domain ON courses(domain);
CREATE INDEX IF NOT EXISTS idx_courses_level ON courses(level);

-- Create users table
CREATE TABLE IF NOT EXISTS users (
    id SERIAL PRIMARY KEY,
    username VARCHAR(255) UNIQUE NOT NULL,
    email VARCHAR(255) UNIQUE NOT NULL,
    password_hash VARCHAR(255) NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- Create plans table
CREATE TABLE IF NOT EXISTS plans (
    user_id INTEGER PRIMARY KEY,
    total_hours INTEGER NOT NULL,
    created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE
);

-- Create plan_steps table
CREATE TABLE IF NOT EXISTS plan_steps (
    id SERIAL PRIMARY KEY,
    user_id INTEGER NOT NULL,
    step INTEGER NOT NULL,
    course_id INTEGER NOT NULL,
    hours INTEGER NOT NULL,
    note TEXT,
    FOREIGN KEY (user_id) REFERENCES users(id) ON DELETE CASCADE
);

CREATE INDEX IF NOT EXISTS idx_plan_steps_user_id ON plan_steps(user_id);
CREATE INDEX IF NOT EXISTS idx_plans_user_id ON plans(user_id);

-- Seed 100 courses across multiple domains

INSERT INTO courses (id, title, domain, level, duration_hours, tags, prereq_ids) VALUES

-- Data Science (1-20)
(1, 'Python Fundamentals', 'Data Science', 'Beginner', 20, '{"python", "programming", "basics"}', '{}'),
(2, 'Statistics for Data Science', 'Data Science', 'Beginner', 25, '{"statistics", "math", "probability"}', '{}'),
(3, 'NumPy Essentials', 'Data Science', 'Beginner', 15, '{"numpy", "python", "arrays"}', '{1}'),
(4, 'Pandas for Data Analysis', 'Data Science', 'Intermediate', 30, '{"pandas", "python", "data-analysis"}', '{3}'),
(5, 'Data Visualization with Matplotlib', 'Data Science', 'Intermediate', 20, '{"matplotlib", "visualization", "python"}', '{3}'),
(6, 'Advanced Pandas Techniques', 'Data Science', 'Advanced', 25, '{"pandas", "data-manipulation", "optimization"}', '{4}'),
(7, 'Machine Learning Basics', 'Data Science', 'Intermediate', 40, '{"ml", "scikit-learn", "algorithms"}', '{2, 4}'),
(8, 'Deep Learning Fundamentals', 'Data Science', 'Advanced', 50, '{"deep-learning", "neural-networks", "tensorflow"}', '{7}'),
(9, 'Natural Language Processing', 'Data Science', 'Advanced', 45, '{"nlp", "text-analysis", "transformers"}', '{7}'),
(10, 'Computer Vision with OpenCV', 'Data Science', 'Advanced', 40, '{"computer-vision", "opencv", "image-processing"}', '{8}'),
(11, 'SQL for Data Analysis', 'Data Science', 'Beginner', 25, '{"sql", "database", "queries"}', '{}'),
(12, 'Big Data with Apache Spark', 'Data Science', 'Advanced', 50, '{"spark", "big-data", "distributed-computing"}', '{4}'),
(13, 'Time Series Analysis', 'Data Science', 'Intermediate', 30, '{"time-series", "forecasting", "statistics"}', '{2, 4}'),
(14, 'A/B Testing and Experimentation', 'Data Science', 'Intermediate', 20, '{"ab-testing", "statistics", "experimentation"}', '{2}'),
(15, 'Feature Engineering', 'Data Science', 'Intermediate', 25, '{"feature-engineering", "ml", "preprocessing"}', '{7}'),
(16, 'Model Deployment with MLOps', 'Data Science', 'Advanced', 35, '{"mlops", "deployment", "docker"}', '{7}'),
(17, 'Reinforcement Learning', 'Data Science', 'Advanced', 45, '{"reinforcement-learning", "ai", "algorithms"}', '{8}'),
(18, 'Data Engineering Fundamentals', 'Data Science', 'Intermediate', 35, '{"data-engineering", "etl", "pipelines"}', '{11}'),
(19, 'Tableau for Business Intelligence', 'Data Science', 'Beginner', 20, '{"tableau", "bi", "visualization"}', '{}'),
(20, 'Power BI Essentials', 'Data Science', 'Beginner', 20, '{"powerbi", "bi", "dashboards"}', '{}'),

-- Web Development (21-40)
(21, 'HTML5 Fundamentals', 'Web Development', 'Beginner', 15, '{"html", "web", "markup"}', '{}'),
(22, 'CSS3 Styling', 'Web Development', 'Beginner', 20, '{"css", "styling", "design"}', '{21}'),
(23, 'JavaScript Basics', 'Web Development', 'Beginner', 30, '{"javascript", "programming", "web"}', '{21}'),
(24, 'Responsive Web Design', 'Web Development', 'Intermediate', 25, '{"responsive", "css", "mobile"}', '{22}'),
(25, 'Modern JavaScript ES6+', 'Web Development', 'Intermediate', 30, '{"javascript", "es6", "modern"}', '{23}'),
(26, 'React Fundamentals', 'Web Development', 'Intermediate', 40, '{"react", "frontend", "components"}', '{25}'),
(27, 'Vue.js Complete Guide', 'Web Development', 'Intermediate', 35, '{"vue", "frontend", "javascript"}', '{25}'),
(28, 'Angular for Enterprise', 'Web Development', 'Intermediate', 45, '{"angular", "typescript", "frontend"}', '{25}'),
(29, 'Node.js Backend Development', 'Web Development', 'Intermediate', 40, '{"nodejs", "backend", "javascript"}', '{25}'),
(30, 'Express.js REST APIs', 'Web Development', 'Intermediate', 30, '{"express", "rest", "api"}', '{29}'),
(31, 'MongoDB Essentials', 'Web Development', 'Beginner', 25, '{"mongodb", "nosql", "database"}', '{}'),
(32, 'Full Stack with MERN', 'Web Development', 'Advanced', 60, '{"mern", "react", "nodejs", "mongodb"}', '{26, 30, 31}'),
(33, 'GraphQL APIs', 'Web Development', 'Advanced', 30, '{"graphql", "api", "backend"}', '{30}'),
(34, 'Next.js for Production', 'Web Development', 'Advanced', 40, '{"nextjs", "react", "ssr"}', '{26}'),
(35, 'TypeScript Mastery', 'Web Development', 'Intermediate', 35, '{"typescript", "javascript", "types"}', '{25}'),
(36, 'TailwindCSS Modern Styling', 'Web Development', 'Intermediate', 20, '{"tailwind", "css", "utility"}', '{22}'),
(37, 'Web Performance Optimization', 'Web Development', 'Advanced', 25, '{"performance", "optimization", "web"}', '{26}'),
(38, 'Progressive Web Apps', 'Web Development', 'Advanced', 30, '{"pwa", "web", "offline"}', '{26}'),
(39, 'WebAssembly Fundamentals', 'Web Development', 'Advanced', 35, '{"webassembly", "wasm", "performance"}', '{23}'),
(40, 'Web Security Best Practices', 'Web Development', 'Advanced', 30, '{"security", "web", "authentication"}', '{30}'),

-- DevOps (41-55)
(41, 'Linux Command Line', 'DevOps', 'Beginner', 25, '{"linux", "bash", "command-line"}', '{}'),
(42, 'Git Version Control', 'DevOps', 'Beginner', 20, '{"git", "version-control", "github"}', '{}'),
(43, 'Docker Fundamentals', 'DevOps', 'Intermediate', 30, '{"docker", "containers", "virtualization"}', '{41}'),
(44, 'Kubernetes Basics', 'DevOps', 'Intermediate', 40, '{"kubernetes", "k8s", "orchestration"}', '{43}'),
(45, 'CI/CD with Jenkins', 'DevOps', 'Intermediate', 35, '{"jenkins", "ci-cd", "automation"}', '{42, 43}'),
(46, 'GitHub Actions Workflows', 'DevOps', 'Intermediate', 25, '{"github-actions", "ci-cd", "automation"}', '{42}'),
(47, 'Infrastructure as Code with Terraform', 'DevOps', 'Advanced', 40, '{"terraform", "iac", "automation"}', '{41}'),
(48, 'Ansible for Configuration Management', 'DevOps', 'Intermediate', 30, '{"ansible", "automation", "configuration"}', '{41}'),
(49, 'Monitoring with Prometheus', 'DevOps', 'Intermediate', 25, '{"prometheus", "monitoring", "metrics"}', '{44}'),
(50, 'Logging with ELK Stack', 'DevOps', 'Intermediate', 30, '{"elk", "logging", "elasticsearch"}', '{44}'),
(51, 'Advanced Kubernetes', 'DevOps', 'Advanced', 45, '{"kubernetes", "advanced", "production"}', '{44}'),
(52, 'Service Mesh with Istio', 'DevOps', 'Advanced', 35, '{"istio", "service-mesh", "kubernetes"}', '{51}'),
(53, 'GitOps with ArgoCD', 'DevOps', 'Advanced', 30, '{"gitops", "argocd", "kubernetes"}', '{44, 42}'),
(54, 'Site Reliability Engineering', 'DevOps', 'Advanced', 40, '{"sre", "reliability", "monitoring"}', '{49}'),
(55, 'Cloud Native Applications', 'DevOps', 'Advanced', 50, '{"cloud-native", "microservices", "kubernetes"}', '{51}'),

-- Cloud Computing (56-65)
(56, 'AWS Fundamentals', 'Cloud', 'Beginner', 30, '{"aws", "cloud", "basics"}', '{}'),
(57, 'AWS EC2 and Networking', 'Cloud', 'Intermediate', 35, '{"aws", "ec2", "networking"}', '{56}'),
(58, 'AWS S3 and Storage', 'Cloud', 'Intermediate', 25, '{"aws", "s3", "storage"}', '{56}'),
(59, 'AWS Lambda Serverless', 'Cloud', 'Intermediate', 30, '{"aws", "lambda", "serverless"}', '{56}'),
(60, 'Azure Fundamentals', 'Cloud', 'Beginner', 30, '{"azure", "cloud", "microsoft"}', '{}'),
(61, 'Google Cloud Platform Basics', 'Cloud', 'Beginner', 30, '{"gcp", "cloud", "google"}', '{}'),
(62, 'AWS Solutions Architect', 'Cloud', 'Advanced', 60, '{"aws", "architecture", "design"}', '{57, 58, 59}'),
(63, 'Multi-Cloud Strategy', 'Cloud', 'Advanced', 40, '{"multi-cloud", "aws", "azure", "gcp"}', '{56, 60, 61}'),
(64, 'Cloud Security', 'Cloud', 'Advanced', 45, '{"cloud-security", "aws", "compliance"}', '{56}'),
(65, 'Cloud Cost Optimization', 'Cloud', 'Intermediate', 25, '{"cost-optimization", "cloud", "finops"}', '{56}'),

-- Mobile Development (66-75)
(66, 'Android Development with Kotlin', 'Mobile', 'Beginner', 50, '{"android", "kotlin", "mobile"}', '{}'),
(67, 'iOS Development with Swift', 'Mobile', 'Beginner', 50, '{"ios", "swift", "mobile"}', '{}'),
(68, 'React Native Cross-Platform', 'Mobile', 'Intermediate', 45, '{"react-native", "mobile", "cross-platform"}', '{26}'),
(69, 'Flutter Development', 'Mobile', 'Intermediate', 45, '{"flutter", "dart", "mobile"}', '{}'),
(70, 'Mobile UI/UX Design', 'Mobile', 'Beginner', 25, '{"ui-ux", "mobile", "design"}', '{}'),
(71, 'Advanced Android Architecture', 'Mobile', 'Advanced', 40, '{"android", "architecture", "mvvm"}', '{66}'),
(72, 'iOS App Store Publishing', 'Mobile', 'Intermediate', 20, '{"ios", "publishing", "app-store"}', '{67}'),
(73, 'Mobile App Testing', 'Mobile', 'Intermediate', 30, '{"testing", "mobile", "automation"}', '{66}'),
(74, 'Push Notifications', 'Mobile', 'Intermediate', 20, '{"push-notifications", "mobile", "firebase"}', '{66}'),
(75, 'Mobile App Performance', 'Mobile', 'Advanced', 25, '{"performance", "mobile", "optimization"}', '{66}'),

-- Cybersecurity (76-85)
(76, 'Cybersecurity Fundamentals', 'Cybersecurity', 'Beginner', 30, '{"security", "basics", "cyber"}', '{}'),
(77, 'Network Security', 'Cybersecurity', 'Intermediate', 35, '{"network-security", "firewall", "protocols"}', '{76}'),
(78, 'Ethical Hacking', 'Cybersecurity', 'Intermediate', 40, '{"ethical-hacking", "penetration-testing", "security"}', '{76}'),
(79, 'Cryptography Essentials', 'Cybersecurity', 'Intermediate', 30, '{"cryptography", "encryption", "security"}', '{76}'),
(80, 'Web Application Security', 'Cybersecurity', 'Advanced', 35, '{"web-security", "owasp", "vulnerabilities"}', '{40}'),
(81, 'Cloud Security Architecture', 'Cybersecurity', 'Advanced', 40, '{"cloud-security", "architecture", "compliance"}', '{56, 76}'),
(82, 'Security Operations Center', 'Cybersecurity', 'Advanced', 45, '{"soc", "incident-response", "monitoring"}', '{77}'),
(83, 'Malware Analysis', 'Cybersecurity', 'Advanced', 40, '{"malware", "reverse-engineering", "analysis"}', '{78}'),
(84, 'Identity and Access Management', 'Cybersecurity', 'Intermediate', 30, '{"iam", "authentication", "authorization"}', '{76}'),
(85, 'Security Compliance and Auditing', 'Cybersecurity', 'Advanced', 35, '{"compliance", "auditing", "governance"}', '{76}'),

-- Database (86-92)
(86, 'PostgreSQL Fundamentals', 'Database', 'Beginner', 30, '{"postgresql", "sql", "database"}', '{}'),
(87, 'Database Design and Normalization', 'Database', 'Intermediate', 25, '{"database-design", "normalization", "schema"}', '{86}'),
(88, 'Advanced SQL Queries', 'Database', 'Intermediate', 30, '{"sql", "queries", "optimization"}', '{86}'),
(89, 'Database Performance Tuning', 'Database', 'Advanced', 35, '{"performance", "indexing", "optimization"}', '{88}'),
(90, 'Redis and Caching Strategies', 'Database', 'Intermediate', 25, '{"redis", "caching", "nosql"}', '{}'),
(91, 'Database Replication', 'Database', 'Advanced', 30, '{"replication", "high-availability", "database"}', '{86}'),
(92, 'Data Modeling Best Practices', 'Database', 'Intermediate', 25, '{"data-modeling", "design", "architecture"}', '{87}'),

-- AI & ML (93-100)
(93, 'AI Ethics and Responsible AI', 'AI', 'Beginner', 15, '{"ai-ethics", "responsible-ai", "bias"}', '{}'),
(94, 'Generative AI Fundamentals', 'AI', 'Intermediate', 30, '{"generative-ai", "llm", "gpt"}', '{7}'),
(95, 'Prompt Engineering', 'AI', 'Beginner', 20, '{"prompt-engineering", "llm", "ai"}', '{}'),
(96, 'LangChain for LLM Applications', 'AI', 'Intermediate', 35, '{"langchain", "llm", "applications"}', '{94, 95}'),
(97, 'RAG Systems', 'AI', 'Advanced', 40, '{"rag", "retrieval", "llm", "embeddings"}', '{96}'),
(98, 'Fine-tuning LLMs', 'AI', 'Advanced', 45, '{"fine-tuning", "llm", "transfer-learning"}', '{94}'),
(99, 'AI Model Evaluation', 'AI', 'Intermediate', 25, '{"evaluation", "metrics", "ml"}', '{7}'),
(100, 'MLOps and Model Monitoring', 'AI', 'Advanced', 40, '{"mlops", "monitoring", "production"}', '{16, 99}');
